--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,9 +3,10 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title= pageTitle
-    //- Comment for the link element
+    //- Comments for the link element
+    //- Link to your CSS stylesheet
     link(rel="stylesheet" href="/css/style.css")
+    title= pageTitle
   body
     block content
     footer
