--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -18,3 +18,5 @@ block content
       input(type="submit" value="Build")
 
   script(src='/js/updateComponents.js')
+  script(src='/js/buildPcFormHandler.js')
+
