--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,10 +3,8 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    //- Comments for the link element
-    //- Link to your CSS stylesheet
-    link(rel="stylesheet" href="/css/style.css")
     title= pageTitle
+    link(rel="stylesheet" href="/style.css") // Update the path to your CSS file
   body
     block content
     footer
