--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title= pageTitle
-    link(rel="stylesheet" href="/style.css") // Update the path to your CSS file
+    link(rel="stylesheet" href="./public/style.css") // Update the path to your CSS file
   body
     block content
     footer
