--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,14 @@ body, html {
     background-color: #f4f4f4;
     color: #333;
   }
+
+  #logo {
+    height: 50px; /* Example height, adjust as needed */
+    position: absolute;
+    top: 10px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+  }
+  
   
   /* Container styling */
   .container {
@@ -102,5 +110,11 @@ body, html {
     position: relative;
     bottom: 0;
     width: 100%;
+  }
+  
+  .main-content {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
