--- a/views/home.pug
+++ b/views/home.pug
@@ -10,10 +10,12 @@ block content
           li.nav-item: a(href="/build-pc") Build PC
           li.nav-item: a(href="/recommend-pc") Recommended PCs
           li.nav-item: a(href="/info-help") Info/Help
-  .main-content
+
+  .main-content(style='background-image: url("/home-pc.jpg");')
     .welcome-banner
       h1 Welcome to TechCrafters
       p The ultimate destination for custom PC enthusiasts.
+
     .page-links
       ul
         li: a(href="/forum") Forum
