--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title Your Website Title
-    link(rel='stylesheet', href='/styles.css')
+    link(rel='stylesheet', href='/style.css')
     // Other head elements
   body
     header
