--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -12,17 +12,34 @@ block content
         label(for="build-name") Build Name
         input(type="text" name="buildName" id="build-name" placeholder="Enter a name for your build" required)
 
+      extends layout
+
+block content
+  div.header-container
+    img#logo(src='/techcrafters.png', alt='TechCrafters Logo')
+    h1.build-title Name & Build Your PC
+
+  form.form-section(action="/submit-build" method="post")
+    fieldset
+      legend Name Your Build
+      .form-row
+        label(for="build-name") Build Name
+        input(type="text" name="buildName" id="build-name" placeholder="Enter a name for your build" required)
+
+      legend Choose Your Components
+
       .form-row
         label(for="cpu") CPU
-        select(name="cpu" id="cpu-select")
+        select(name="cpu" id="cpu-select" required)
           each cpu in cpus
-            option(value=cpu.socket) #{cpu.name} - $#{cpu.price}
+            option(value=cpu.name + ' - $' + cpu.price) #{cpu.name} - $#{cpu.price}
 
       .form-row
         label(for="motherboard") Motherboard
-        select(name="motherboard" id="motherboard-select")
+        select(name="motherboard" id="motherboard-select" required)
           each mb in motherboards
-            option(value=mb.socket) #{mb.name} - $#{mb.price}
+            option(value=mb.name + ' - $' + mb.price) #{mb.name} - $#{mb.price}
+
 
       .form-row
         label(for="gpu") GPU
