--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -18,14 +18,17 @@ block content
         label(for="cpu") CPU
         select(name="cpu" id="cpu-select" required)
           each cpu in cpus
-            option(value=cpu.name + ' - $' + cpu.price data-socket=cpu.socket) #{cpu.name} - $#{cpu.price}
+            if cpu.socket && cpu.price
+              option(value=cpu.name + ' - $' + cpu.price data-socket=cpu.socket) #{cpu.name} - #{cpu.price}
 
 
       .form-row
         label(for="motherboard") Motherboard
         select(name="motherboard" id="motherboard-select" required)
           each mb in motherboards
-            option(value=mb.name + ' - $' + mb.price) #{mb.name} - $#{mb.price}
+            if mb.socket && mb.price
+              option(value=mb.name + ' - $' + mb.price) #{mb.name} - #{mb.price}
+
 
       .form-row
         label(for="gpu") GPU
