--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -80,7 +80,12 @@ block content
           each sc in sound_cards
             option(value=sc.id) #{sc.name} - $#{sc.price}
 
+      .form-row.total-price
+          span Total Build Price: $
+          span#total-price 0
+
       input.form-button(type="submit" value="Build")
 
-  script(src='/js/updateComponents.js')
-  script(src='/js/buildPcFormHandler.js')
+script(src='/js/updateComponents.js')
+script(src='/js/buildPcFormHandler.js')
+script(src='/js/calculateTotalPrice.js')
