--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -88,4 +88,4 @@ block content
 
 script(src='/js/updateComponents.js')
 script(src='/js/buildPcFormHandler.js')
-script(src='/js/calculateTotalPrice.js')
+#script(src='/js/calculateTotalPrice.js')
