--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -1,4 +1,19 @@
-extends layout
+header
+      .container
+        .logo-container
+          img#logo(src='/techcrafters.png', alt='TechCrafters Logo')
+        nav
+          ul.nav-list
+            li.nav-item
+              a(href="/") Home
+            li.nav-item
+              a(href="/forum") Forum
+            li.nav-item
+              a(href="/build-pc") Build PC
+            li.nav-item
+              a(href="/recommend-pc") Recommended PCs
+            li.nav-item
+              a(href="/info-help") Info/Help
 
 block content
   header
