--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -1,5 +1,10 @@
 header
       .container
+      head
+        title Your Website Title
+        link(rel='stylesheet', href='/style.css')
+        // Other head elements
+      body
         .logo-container
           img#logo(src='/techcrafters.png', alt='TechCrafters Logo')
         nav
