--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,7 @@ doctype html
 html
   head
     title Your Website Title
-    link(rel='stylesheet', href='/style.css')
-    // Other head elements
+    link(rel='stylesheet', href='/style.css')  
   body
     header
       .container
@@ -22,4 +21,7 @@ html
     footer
       p © 2024 TechCrafters. All rights reserved.
 
-    // Additional scripts or footer elements
+    //  scripts or  elements
+script(src='/js/updateComponents.js')
+script(src='/js/buildPcFormHandler.js')
+script(src='/js/calculateTotalPrice.js')
