--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   header
     .welcome-banner
-      h1 Welcome to TechCrafters
+      h1 Welcome to TechCrafterss
       p The ultimate destination for custom PC enthusiasts.
 
     .page-links
