--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
           li.nav-item: a(href="/info-help") Info/Help
   .main-content
     .welcome-banner
-      h1 Welcome to TechCrafters
+      h1 Welcome to TechCrafterss
       p The ultimate destination for custom PC enthusiasts.
     .signup-section
       form.signup-form(action="/signup" method="post")
