--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -1,4 +1,4 @@
-//extends layout
+extends layout
 
 block content
   form.form-section(action="/submit-build" method="post")
@@ -73,12 +73,5 @@ block content
         .form-row.total-price
           span Total Build Price: $
           span#total-price 0
-
-        // Total Price display
-        .form-row.total-price
-          span Total Build Price: $
-          span#total-price 0
-
-  
 
 // Including JavaScript files
