--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  .build-title Name & Build Your PC
   form.form-section(action="/submit-build" method="post")
     fieldset
       legend Name Your Build
