--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
     block content
     footer
       p © 2024 TechCrafters. All rights reserved.
-    // Including the JavaScript files for functionality
-    script(src='/js/updateComponents.js')
-    script(src='/js/buildPcFormHandler.js')
-    script(src='/js/calculateTotalPrice.js')
+  // Including the JavaScript files for functionality
+  // script(src='/js/updateComponents.js')
+  //script(src='/js/buildPcFormHandler.js')
+  //script(src='/js/calculateTotalPrice.js')
