--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -92,3 +92,6 @@ block content
         span#total-price 0
 
 // Including JavaScript files
+script(src='/js/updateComponents.js')
+script(src='/js/calculateTotalPrice.js')
+script(src='/js/buildPcFormHandler.js')
