--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+  if message
+    .alert.alert-danger= message
+
   h1 Login
   form(action="/login" method="post")
     .form-row
