--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -15,6 +15,12 @@ html
             li.nav-item: a(href="/build-pc") Build PC
             li.nav-item: a(href="/recommend-pc") Recommended PCs
             li.nav-item: a(href="/info-help") Info/Help
+            if currentUser
+                li.nav-item: a(href="/logout") Logout (#{currentUser.username})
+            else
+                li.nav-item: a(href="/login") Login
+                li.nav-item: a(href="/register") Sign Up
+  
 
 block content
   .build-title Name & Build Your PC
