--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -24,7 +24,7 @@ html
 
 block content
   .build-title Name & Build Your PC
-  form.form-section(action="/submit-build" method="post")
+  form.form-section(action="/save-build" method="post")
     fieldset
       legend Name Your Build
       .form-row
