--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -24,7 +24,7 @@ html
 
 block content
   .build-title Name & Build Your PC
-  form.form-section(action="/save-build" method="post")
+  form#build-form(action='/save-build' method='post')
     fieldset
       legend Name Your Build
       .form-row
@@ -104,7 +104,7 @@ block content
         span#total-price 0
 
       // Including JavaScript files
-      script(src='/js/updateComponents.js')
+      script(src='/js/updatecomponents.js')
       script(src='/js/calculateTotalPrice.js')
-      script(src='/js/buildPcFormHandler.js')
+      script(src='/js/buildPCFormHandler.js')
       script(src='/js/validation-script.js')
