--- a/views/build-pc.pug
+++ b/views/build-pc.pug
@@ -24,7 +24,7 @@ html
 
 block content
   .build-title Name & Build Your PC
-  form#build-form(action='/save-build' method='post')
+  form#build-form(action="/save-build" method="post")
     fieldset
       legend Name Your Build
       .form-row
